[gd_scene load_steps=19 format=3 uid="uid://kgvbbaoliknv"]

[ext_resource type="Script" path="res://Raygan.gd" id="1_8weju"]
[ext_resource type="Texture2D" uid="uid://ggaje2v7gmax" path="res://Assets/RayganHead.png" id="1_maewx"]
[ext_resource type="Texture2D" uid="uid://bnco1m8metqgq" path="res://Assets/RayganRightArm.png" id="2_o6u6j"]
[ext_resource type="Texture2D" uid="uid://b0lwvche1aaq1" path="res://Assets/RayganBody.png" id="2_ou1ei"]
[ext_resource type="Texture2D" uid="uid://dl181xbqxaayw" path="res://Assets/RayganHeadDown.png" id="3_3h2o4"]
[ext_resource type="Script" path="res://RayganLeft.gd" id="3_qlf6u"]
[ext_resource type="Texture2D" uid="uid://dok877qoph05o" path="res://Assets/RayganLeftArm.png" id="4_pqba3"]
[ext_resource type="Texture2D" uid="uid://cqt8lb7q83akh" path="res://Assets/RayganHeadLeft.png" id="4_rqu2v"]
[ext_resource type="Texture2D" uid="uid://b7udeb2hsswvk" path="res://Assets/RayganHeadRight.png" id="5_aqa13"]
[ext_resource type="Script" path="res://RayganRight.gd" id="5_hyb44"]
[ext_resource type="Script" path="res://RayganHeadDown.gd" id="5_v3rld"]
[ext_resource type="Script" path="res://RayganUp.gd" id="6_llkve"]
[ext_resource type="Texture2D" uid="uid://dvk1bwt4h8yh1" path="res://Assets/RayganHeadUp.png" id="6_w8bwq"]
[ext_resource type="Script" path="res://RayganHeadLeft.gd" id="7_koi42"]
[ext_resource type="Script" path="res://RayganDown.gd" id="7_w7nsc"]
[ext_resource type="Script" path="res://RayganHeadRight.gd" id="9_pt4tg"]
[ext_resource type="Script" path="res://RayganHeadUp.gd" id="11_qkvxk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u7m8y"]
size = Vector2(67, 218)

[node name="Raygan" type="CharacterBody2D"]
script = ExtResource("1_8weju")

[node name="RayganBody" type="Sprite2D" parent="."]
position = Vector2(33, -50)
scale = Vector2(0.605658, 0.605658)
texture = ExtResource("2_ou1ei")

[node name="RayganHeadStraight" type="Sprite2D" parent="."]
position = Vector2(32.5, -49.4973)
scale = Vector2(0.584295, 0.584296)
texture = ExtResource("1_maewx")

[node name="RayganHeadDown" type="Sprite2D" parent="."]
visible = false
position = Vector2(9, -77)
scale = Vector2(0.181438, 0.181438)
texture = ExtResource("3_3h2o4")
script = ExtResource("5_v3rld")

[node name="RayganHeadLeft" type="Sprite2D" parent="."]
visible = false
position = Vector2(0.437514, -66.2527)
scale = Vector2(0.224307, 0.224307)
texture = ExtResource("4_rqu2v")
script = ExtResource("7_koi42")

[node name="RayganHeadRight" type="Sprite2D" parent="."]
visible = false
position = Vector2(13.25, -65.0006)
scale = Vector2(0.188222, 0.188222)
texture = ExtResource("5_aqa13")
script = ExtResource("9_pt4tg")

[node name="RayganHeadUp" type="Sprite2D" parent="."]
visible = false
position = Vector2(5, -91)
scale = Vector2(0.192552, 0.192552)
texture = ExtResource("6_w8bwq")
script = ExtResource("11_qkvxk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(3.5, 26)
shape = SubResource("RectangleShape2D_u7m8y")

[node name="RayganRight" type="Sprite2D" parent="."]
visible = false
position = Vector2(40, 27)
rotation = 0.674605
scale = Vector2(0.843043, 0.843043)
texture = ExtResource("2_o6u6j")
script = ExtResource("5_hyb44")

[node name="RayganLeft" type="Sprite2D" parent="."]
visible = false
position = Vector2(-39, 27)
rotation = -0.780748
scale = Vector2(0.858512, 0.858512)
texture = ExtResource("4_pqba3")
script = ExtResource("3_qlf6u")

[node name="RayganUp" type="Sprite2D" parent="."]
visible = false
position = Vector2(-21, 6)
rotation = 0.0240563
scale = Vector2(0.813652, 0.813652)
texture = ExtResource("4_pqba3")
script = ExtResource("6_llkve")

[node name="RayganDown" type="Sprite2D" parent="."]
visible = false
position = Vector2(72, 4)
rotation = -2.22447
scale = Vector2(0.798198, 0.798198)
texture = ExtResource("4_pqba3")
script = ExtResource("7_w7nsc")
